@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-26T00:39:01Z",
-  "count_outdated" : 7306,
-  "uniques_outdated" : 3071,
+  "timestamp" : "2024-04-26T16:11:44Z",
+  "count_outdated" : 7345,
+  "uniques_outdated" : 3095,
   "count" : 7546,
   "uniques" : 3242,
   "clones" : [
-    {
-      "timestamp": "2024-04-12T00:00:00Z",
-      "count": 39,
-      "count_minmax": [ 39, 39 ],
-      "count_decinc": [ 0, 39 ],
-      "uniques": 24,
-      "uniques_minmax": [ 24, 24 ],
-      "uniques_decinc": [ 0, 24 ]
-    },
     {
       "timestamp": "2024-04-13T00:00:00Z",
       "count": 1,
