@@ -1,12 +1,7 @@
 {
-  "count": 240,
-  "uniques": 157,
+  "count": 201,
+  "uniques": 136,
   "clones": [
-    {
-      "timestamp": "2024-04-12T00:00:00Z",
-      "count": 39,
-      "uniques": 24
-    },
     {
       "timestamp": "2024-04-13T00:00:00Z",
       "count": 1,
